Fix nav overflow

--- a/css/grayscale_v1.1.scss
+++ b/css/grayscale_v1.1.scss
@@ -120,10 +120,6 @@ ol {
     /*border-top: 8px solid $primary; */
     background: $black;
 
-    /* Fix height limit and scroll for small screen and many items menu */
-    max-height: 100%;
-    overflow-y: auto;
-
     .navbar-collapse {
         text-align: center;
     }
